--- a/gb/24/4/23/n14232321.md
+++ b/gb/24/4/23/n14232321.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>200磅重稀有高加索犬以为自己是只哈巴狗</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/04/id14232369-10-e1708918846658-600x400.jpeg" />
 <h6>罕见巨型高加索山犬（Caucasian Ovcharka）尤吉。（劳拉·墨菲提供）
 </h6>
 <hr>
-	<p>【大纪元2024年04月23日讯】（Tyler Wilson撰文／大纪元记者艾琛编译）罕见巨型高加索山犬尤吉（Yogi） 身高6英尺，体重达200磅，自认为自己是一只宠物犬（a Lap Dog），在网上引起了广泛关注。</p>
+	<p>【大纪元2024年04月29日讯】（Tyler Wilson撰文／大纪元记者艾琛编译）罕见巨型高加索山犬尤吉（Yogi） 身高6英尺，体重达200磅，自认为自己是一只宠物犬（a Lap Dog），在网上引起了广泛关注。</p>
 <p>当33岁的家庭主妇劳拉·墨菲（Laura Murphy）和她住在马萨诸塞州波士顿的家人带着尤吉散步时，路人都会转过头来盯着它看。</p>
-<p>墨菲女士告诉《大纪元时报》，“人们以为我们真的在遛狮子或熊等动物。他们会停下车或停下手中的活儿问，‘那是只什么动物？我能为它拍一张照片吗？’”</p>
+<p>墨菲女士告诉《大纪元时报》，“人们以为我们真的在遛狮子或熊等动物。他们会停下车或停下手中的活儿问，‘那是只什么动物？我能为它拍一张照片吗？’”（<strong>延伸阅读：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/11/25/n14124051.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener noreferrer">英国最大狗与小象一样重 却是“温柔的巨人”</a></span></strong>）</p>
 <p>尤吉的犬类品种也被称为“高加索牧羊犬”（Caucasian shepherds ），让很多人感到惊讶，但墨菲一家在经历了将尤吉带到美国的漫长过程后，他们很清楚自己在做什么。</p>
 <p>墨菲太太透露说，尤吉今年7月就满5岁了，它是从罗马尼亚来到美国的。</p>
-<figure id="attachment_14232323" aria-describedby="caption-attachment-14232323" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14232323-2.jpeg"><img class="size-large wp-image-14232323" src="https://i.epochtimes.com/assets/uploads/2024/04/id14232323-2-600x659.jpeg" alt="" width="600" b="659" /></a><figcaption id="caption-attachment-14232323" class="wp-caption-text">罕见巨型高加索山犬（Caucasian Ovcharka）尤吉与墨菲太太和她的儿子（劳拉·墨菲提供）</figcaption></figure>
+<figure id="attachment_14232323" aria-describedby="caption-attachment-14232323" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14232323-2.jpeg"><img decoding="async" class="size-large wp-image-14232323" src="https://i.epochtimes.com/assets/uploads/2024/04/id14232323-2-600x659.jpeg" alt="" width="600" b="659" /></a><figcaption id="caption-attachment-14232323" class="wp-caption-text">罕见巨型高加索山犬（Caucasian Ovcharka）尤吉与墨菲太太和她的儿子（劳拉·墨菲提供）</figcaption></figure>
 <p>这个温顺的庞然大物被迎接到墨菲家时只有10周大，它必须乘坐两次航班，从法国转机，然后飞往波士顿。</p>
 <p>除了长途跋涉，墨菲夫妇还必须向饲养者证明，他们已经准备好照顾这样一只独特的大狗。除了证明他们的家和院子有足够的空间容纳像尤吉这么大的动物外，他们还必须证明他们有一套训练尤吉的设施。墨菲太太说，如果达不到上述标准，饲养者就会去找其他对这个品种更加认真的收养者。</p>
 <p>然而，墨菲一家成功地完成了让尤吉跨越国界的艰难收养过程。在此之前，他们已经养过多种其它品种的狗，因此对这一特殊犬种关注已久。高加索山犬以其良好的家犬品种而著称，它们在农场也能很好地工作，并具有很强的护卫本能。这些都是这家人最看重的特点。</p>
 <p>经过广泛的研究，他们找到了一位来自罗马尼亚的饲养者。</p>
-<p>尤吉与这个家庭已经相处了近5年，与每个人都建立了深厚的感情，但与墨菲先生、32 岁的水管工布雷登·墨菲（Brayden Murphy）和他们的第三个儿子多诺万（Donovan）有着相当特殊和独特的感情，多诺万与尤吉一起长大。</p>
+<p>尤吉与这个家庭已经相处了近5年，与每个人都建立了深厚的感情，但与墨菲先生、32岁的水管工布雷登·墨菲（Brayden Murphy）和他们的第三个儿子多诺万（Donovan）有着相当特殊和独特的感情，多诺万与尤吉一起长大。</p>
 <p>尤吉最喜欢的活动包括在墨菲先生下班回家后与他摔跤。</p>
 <p>墨菲太太分享说，“对其他人来说，尤吉的叫声可能听起来很吓人。但它只是在玩耍，我很喜欢看到他们跳来跳去、互相摔跤的样子。</p>
 <p>尤吉憨态可掬的动作不仅使它深受家人的喜爱，还通过社交媒体吸引了全世界数百万人的关注。墨菲太太在分享它的一段在网上疯传的视频时说，“那是一段尤吉从沙发上站起来的视频，他躺在我大儿子身上，我大儿子躺在一条漂亮的毯子上，我不得不把我儿子从它身下拉起来。它根本不知道自己在做什么，也不知道自己正躺在我儿子身上。”</p>
@@ -25,52 +25,62 @@
 <p><strong>?<u><ahref="https://www.youmaker.com/video/d75dfa5d-9c12-4e03-8209-37820f62e6b9" target="_blank" rel="noopener noreferrer">点击这里看视频</a></u>。</strong></p>
 <p>墨菲太太非常珍惜与尤吉在一起的每一个回忆，并乐于记录它的趣事。</p>
 <p>她分享说，“和尤吉在一起的每一天都是快乐的回忆。我希望我们能和它一起度过更多快乐的时光。”</p>
-<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594946-a.jpg&amp;w=1200&amp;q=75" target="_blank" rel="noreferrer noopener"> <img class="" src="https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594946-a.jpg&amp;w=1200&amp;q=75" width="600" b="400" /></a><figcaption class="wp-caption-text">尤吉和墨菲的孩子们在一起（劳拉·墨菲提供）</figcaption></figure>
+<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594946-a.jpg&amp;w=1200&amp;q=75" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594946-a.jpg&amp;w=1200&amp;q=75" width="600" b="400" /></a><figcaption class="wp-caption-text">尤吉和墨菲的孩子们在一起（劳拉·墨菲提供）</figcaption></figure>
 <p>虽然尤吉的视频已经获得了多达2000万次的点击率，但墨菲夫妇如此喜爱他们的“大泰迪熊”（big teddy bear）还有更深、更有意义的原因。</p>
 <p>据墨菲太太说，尤吉非常认真地对待自己作为护卫犬的工作。它乐于保护家人和房子，并让松鼠、郊狼和野兔等潜在入侵者远离房产以确保家人的安全。</p>
 <p>墨菲太太称，“我知道只要它在家里，我们就感到很安全。我认为只要有它在，整个社区都是安全的。”</p>
 <p>在大多数情况下，尤吉在迎接墨菲家庭成员时都非常友好和开心。但当它看到送货员时，就会跳出窗户，以自己的高大吓唬他们。有些送货员甚至被吓得摔倒在地，因为他们没想到会看到这么大的动物从窗户跳出来。</p>
-<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594947-b.jpg&amp;w=1200&amp;q=75" target="_blank" rel="noreferrer noopener"> <img class="" src="https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594947-b.jpg&amp;w=1200&amp;q=75" width="600" b="400" /></a><figcaption class="wp-caption-text">（劳拉·墨菲提供）</figcaption></figure>
+<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594947-b.jpg&amp;w=1200&amp;q=75" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594947-b.jpg&amp;w=1200&amp;q=75" width="600" b="400" /></a><figcaption class="wp-caption-text">（劳拉·墨菲提供）</figcaption></figure>
 <p>在墨菲一家珍贵的家庭时光中，尤吉也扮演了重要角色。</p>
 <p>当墨菲太太怀上第四个儿子莱恩（Lehan） 的时候，尤吉就紧紧地跟在她身边，似乎知道她怀上了孩子。</p>
 <p>墨菲太太分享道，“当我把刚出生几天的儿子莱恩抱回家时，尤吉立刻和他结下了不解之缘，只要我儿子发出轻微的声音时，他就会呜呜地对我叫，因为它想让我马上去看看莱恩。在我儿子突然意外去世后，尤吉仍然时不时地去看看他的婴儿床，并发出呜呜的叫声。因为它长得很高，很容易看到婴儿床的里面，看到莱恩已经不在了，它会和我们一起悲伤。”</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594941-7.jpeg&amp;w=1200&amp;q=75" target="_blank" rel="noreferrer noopener"> <img class="" src="https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594941-7.jpeg&amp;w=1200&amp;q=75" width="450" b="478" /></a><figcaption class="wp-caption-text">尤吉和墨菲一家一起缅怀莱恩。（劳拉·墨菲提供）</figcaption></figure>
-<p>对于想要养一只像尤吉这样的大狗的人，墨菲太太建议他们先了解一下该犬种的毛发梳理和训练需求，因为高加索山犬的稀有性使得很多培训师都很难为它们服务。</p>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594941-7.jpeg&amp;w=1200&amp;q=75" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594941-7.jpeg&amp;w=1200&amp;q=75" width="450" b="478" /></a><figcaption class="wp-caption-text">尤吉和墨菲一家一起缅怀莱恩。（劳拉·墨菲提供）</figcaption></figure>
+<p>对于想要养一只像尤吉这样的大狗的人，墨菲太太建议他们先了解一下该犬种的毛发梳理和训练需求，因为高加索山犬的稀有性使得很多培训师都很难为它们服务。（<strong>延伸阅读：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/22/6/2/n13750851.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener noreferrer">“世上最高的狗”美国大丹犬身高超一米</a></span></strong>）</p>
 <p>墨菲太太透露说，“我们有一位训练员曾与尤吉合作过。幸运的是，她给了他一个机会，因为尤吉当时还是一只小狗。”</p>
-<figure style="width: 599px" class="wp-caption aligncenter"><ahref=" https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594938-4.jpeg&amp;w=1200&amp;q=75" target="_blank" rel="noreferrer noopener"> <img class="" src="https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594938-4.jpeg&amp;w=1200&amp;q=75" width="599" b="539" /></a><figcaption class="wp-caption-text">(劳拉·墨菲提供）</figcaption></figure>
+<figure style="width: 599px" class="wp-caption aligncenter"><ahref=" https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594938-4.jpeg&amp;w=1200&amp;q=75" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://www.theepochtimes.com/_next/image?url=https%3A%2F%2Fimg.theepochtimes.com%2Fassets%2Fuploads%2F2024%2F02%2F26%2Fid5594938-4.jpeg&amp;w=1200&amp;q=75" width="599" b="539" /></a><figcaption class="wp-caption-text">(劳拉·墨菲提供）</figcaption></figure>
 <p>墨菲太太是一位家庭主妇，她可以花很多时间陪伴尤吉。</p>
 <p>她称，“加索山犬是领地护卫犬，如果处理得当，很适合与家人相处，但必须在适当的环境中才能茁壮成长。与一般的护卫犬不同，加索山犬非常认真地对待它们作为护卫犬的工作。”</p>
 <p>“加索山犬是令人惊叹的大狗，既能接受训练，又能表达爱意，还是个大傻瓜。它们的确是美丽而独特的犬种，值得全世界所有人的爱和尊重。我很荣幸在我们的生活中拥有尤吉，我非常喜欢与世界分享尤吉，同时让人们从各个方面了解它和加索山犬品种。”</p>
 <p><em>原文：<ahref="https://www.theepochtimes.com/bright/video-giant-200-pound-rare-caucasian-ovcharka-insists-that-hes-a-lap-dog-and-its-adorable-5594931">VIDEO: Giant 200-Pound Rare Caucasian Ovcharka Insists That He’s a Lap Dog—And It’s Adorable</a>刊于英文《大纪元时报》。</em></p>
 <p>责任编辑：韩玉#</p>
+<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/1/9/n14154322.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">男主人穿丛林服测爱犬智商 结果令人捧腹</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/4/22/n14231197.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">兽医：遛狗时一定要让小狗做这件事</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/3/12/n13948648.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">这只巨型缅因猫太大 相当9岁孩子平均身高</a></span></li>
+<ul style="list-style: inside;">
+<li style="font-weight: bold; color: #000;">看更多→ <a style="color: #0000ff;" href="https://github.com/1992513/djy/blob/master/gb/tag/%e7%8b%97%e7%8b%97.md#1?utm_term=djy_a_tag" target="_blank" rel="noopener noreferrer">狗狗相关文章</a></li>
+</ul>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069677.md#1">组图：比利时犬不喜欢食物的搞笑反应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/2/n14193275.md#1">金毛猎犬试吃食物的滑稽模样令人忍俊不禁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/15/n14203147.md#1">狗狗第一次看到雪人惊讶不已 反应很搞笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229277.md#1">搞笑视频：喜欢玩水的狗狗拒绝离开泳池</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/8/n14069677.md#1">组图：比利时犬不喜欢食物的搞笑反应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/2/n14193275.md#1">金毛猎犬试吃食物的滑稽模样令人忍俊不禁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/15/n14203147.md#1">狗狗第一次看到雪人惊讶不已 反应很搞笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/19/n14229277.md#1">搞笑视频：喜欢玩水的狗狗拒绝离开泳池</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/15/n10784939.md#1" target="_blank">共产暴政录：“抗美援朝”真相</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/27/n10936495.md#1" target="_blank">林辉：抗日名将殉国身后妻儿惨到乞讨</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/1/10/n2392045.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/22/n14230977.md#1">【未解之谜】精准预言 易经大师曾仕强泄漏的天机：这些年分很关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/17/n14227563.md#1">坚定拒绝淫邪 积阴德得福报的实例</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14234077.md#1">“会发光”的花卉画：扬?范?海瑟姆的写实主义</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232524.md#1">原创歌曲首发《四?二五赞歌》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/6/n10956298.md#1">文艺复兴时期最伟大的肖像画家之一：小汉斯?霍尔班（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/27/n14235253.md#1">【中国禁闻】布林肯会晤习近平 提系列关切问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/28/n14235869.md#1">【时事军事】乌获军援 作战或不按常理出牌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/27/n14235250.md#1">【全球新闻】美国再抓共谍 中国人芝加哥被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14234192.md#1">对赌失败欠巨款？刘德华官宣开启内地巡演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14234264.md#1">日本女星井上朋子揭大陆演艺圈潜规则</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/27/n14235597.md#1">刘德华内地巡演票价离谱 高额代拍费吓退观众</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234301.md#1">胡歌上街疑为妻买包子 获网友赞“好接地气”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14235063.md#1">产后担心身材走样 39岁戚薇一番话引共鸣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234623.md#1">如何让兰花重新开花？ 园艺达人教你秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/24/n14233197.md#1">六类茶各有益处  1种茶最消脂、1种茶更延寿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234749.md#1">【健康1+1】历时最长哈佛研究 晚年幸福7秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/11/n14223433.md#1">抗癌降血糖 这种无麸质谷物营养超高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/28/n14235969.md#1">美国房价涨不停 一个隐藏原因</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284970.md#1">【环球直击】英国大选工党获胜 新首相面临考验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285779.md#1">【车评】美式豪电车 2024 Cadillac LYRIQ Sport 3 AWD</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285173.md#1">岳阳官方堵洞庭湖溃堤失败 “堵嘴”文件曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285003.md#1">洞庭湖决堤 洪水漫过房顶 村民连夜逃难</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251916.md#1">稳血糖又减肥 3运动摆脱糖尿病</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/23/n14232321.htm">200磅重稀有高加索犬以为自己是只哈巴狗</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232321.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/4/23/n14232321.htm">200磅重稀有高加索犬以为自己是只哈巴狗</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/23/n14232321.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
